--- a/index.css
+++ b/index.css
@@ -348,6 +348,7 @@ body:not(.user-is-tabbing) a:focus {
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 100;
   }
   
 .topnav a {
